--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,9 +1,17 @@
 html {
   touch-action: manipulation;
   box-sizing: border-box;
-  /* font-size: calc(100vw / 7.5); */
+  font-size: -webkit-calc(100vw / 7.5 * 2);
+  font-size: calc(100vw / 7.5 * 2);
 }
-
+@media screen and (min-width: 562.5px) {
+  html {
+    font-size: 150px;
+  }
+}
+* {
+  margin: 0;
+}
 *,
 ::before,
 ::after {
@@ -11,14 +19,16 @@ html {
 }
 
 body {
-  word-break: break-word;
   margin: 0;
-  color: #333;
-  font-size: 14px;
-  font-variant: tabular-nums;
   line-height: 1.5715;
+  font-size: 14px;
+  color: #333333;
   background-color: #fff;
-  font-feature-settings: 'tnum';
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
+  font-family: 'MiSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 html,
@@ -104,4 +114,9 @@ textarea {
     rgba(0, 0, 0, 0.05) 60%,
     rgba(0, 0, 0, 0) 0%
   );
+}
+
+ul {
+  padding: 0;
+  list-style: none;
 }
